--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "description": "This is a copy of the Thunderboard system with the Edge in the middle",
     "domains": [],
     "gateways": [],
-    "image_url": "https://docs.clearblade.com/v/3/static/img/default_package.png",
+    "image_url": "https://www.digikey.com/-/media/Images/Product%20Highlights/S/Silicon%20Laboratories%20Inc/Thunderboard%20Sense%202%20Next%20Generation%20IoT%20Development%20Kit/silicon-labs-thunderboard-sense-2.jpg",
     "keywords": [
         "clearblade",
         "iot",
